--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
           targets: x86_64-unknown-linux-musl, aarch64-unknown-linux-musl
       - run: pip install maturin
       - run: maturin build --release --target x86_64-unknown-linux-musl
-      - run: maturin build --release --target aarch64-unknown-linux-musl
+      # - run: maturin build --release --target aarch64-unknown-linux-musl
       - name: Upload wheel artifact
         uses: actions/upload-artifact@v4
         with:
