--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
           targets: x86_64-unknown-linux-musl, aarch64-unknown-linux-musl
       - run: pip install maturin
       - run: maturin build --release --target x86_64-unknown-linux-musl
-      - run: maturin build --release --target aarch64-unknown-linux-musl
+      # - run: maturin build --release --target aarch64-unknown-linux-musl
       - name: Upload wheel artifact
         uses: actions/upload-artifact@v4
         with:
@@ -55,6 +55,7 @@ jobs:
         with:
           path: wheels
       - run: pip install twine
+      - run: pip install -U packaging
       - name: Upload wheels to PyPI
         env:
           TWINE_USERNAME: "__token__"
